--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   simple_animations: ^1.3.3
 
-
+  http: ^0.13.5
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.0.8
   carousel_slider: ^4.2.1
