--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  video_player: ^2.5.2
+
   flutter_lints: ^2.0.0
   form_field_validator: ^1.1.0
 
